[tool.poetry]
name = "audiolm-pytorch"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kulik <djvudakulik@gmail.com>"]
readme = "README.md"
packages = [{include = "audiolm_pytorch"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
tensorboardx = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
